# littlepress-ai

./: .gitignore  .mailmap  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  build.py  pyproject.toml  requirements.txt  sonar-project.properties
.claude/skills/generating-conventional-commits/: SKILL.md
.claude/skills/preserve-child-voice/: SKILL.md
.claude/skills/select-cover-template/: SKILL.md
.github/workflows/: release.yml  sonar.yml
docs/: PLAN.md  README.md  p0-01-packaging-and-launch.md  p1-01-repl-and-provider-selection.md  p1-02-session-state.md  p2-01-tool-suite-and-agent-loop.md  p3-01-illustration-generation.md  p4-01-ocr.md  p5-01-layout-assistance.md
docs/superpowers/plans/: 2026-04-22-review-based-gate.md  2026-04-23-deterministic-ingestion.md
docs/superpowers/specs/: 2026-04-22-review-based-gate-design.md  2026-04-23-deterministic-ingestion-design.md
examples/: book.json
src/: agent_tools.py  builder.py  cli.py  colophon.py  config.py  draft.py  drawing_extraction.py  fonts.py  imposition.py  ingestion.py  keyring_store.py  memory.py  metadata_i18n.py  metadata_prompts.py  pages.py  pdf_ingest.py  prune.py  repl.py  schema.py  session.py
src/providers/: image.py  llm.py  validator.py
tests/: conftest.py  test_agent.py  test_agent_greeting.py  test_agent_tools.py  test_build.py  test_builder.py  test_cli.py  test_cli_agent.py  test_colophon.py  test_draft.py  test_drawing_extraction.py  test_fonts.py  test_image_provider.py  test_imposition.py  test_ingestion.py  test_key_validation.py  test_keyring_store.py  test_llm_providers.py  test_llm_translator_helpers.py  test_memory.py  test_metadata_prompts.py  test_pages.py  test_pdf_ingest.py  test_provider_selection.py  test_prune.py  test_repl.py  test_repl_chat.py  test_repl_draft_commands.py  test_repl_drag_drop.py  test_repl_keyring.py  test_repl_load.py  test_repl_memory.py  test_repl_prune.py  test_repl_render.py  test_repl_session.py  test_repl_tools.py  test_review_loop.py  test_schema.py  test_session.py  test_slash_menu.py  (+2 more)
