[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "child-book-generator"
version = "0.1.0"
description = "Turn a child's picture-book draft PDF into a print-ready A5 book and A4 booklet, preserving the child's voice."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [{ name = "Mehmet Fahri Özmen" }]
keywords = ["pdf", "children", "book", "picture-book", "cli"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: End Users/Desktop",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Multimedia :: Graphics",
  "Topic :: Printing",
]
dependencies = [
  "reportlab>=4.0.0",
  "Pillow>=10.0.0",
  "pypdf>=4.0.0",
  "rich>=13.0.0",
]

[project.optional-dependencies]
# Each LLM/image/OCR provider is an opt-in extra so a user can install only
# what they need. Populated as providers land (p1-01, p3-01, p4-01).
anthropic = ["anthropic>=0.30.0"]
dev = ["pytest>=8.0.0", "pytest-cov>=5.0.0"]

[project.scripts]
child-book-generator = "src.cli:main"

[project.urls]
Homepage = "https://github.com/mfozmen/child-book-generator"
Repository = "https://github.com/mfozmen/child-book-generator"
Issues = "https://github.com/mfozmen/child-book-generator/issues"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.hatch.build.targets.sdist]
include = ["src", "tests", "examples", "README.md", "LICENSE", "pyproject.toml"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.semantic_release]
# Conventional Commits drive every version bump. feat -> minor, fix -> patch,
# BREAKING CHANGE -> major. No manual version edits in pyproject.toml.
version_toml = ["pyproject.toml:project.version"]
branch = "main"
commit_message = "chore(release): {version} [skip ci]"
changelog_file = "CHANGELOG.md"
# No build, no artifact upload until PyPI publishing lands. PSR still bumps
# the version, writes CHANGELOG.md, tags, and cuts a GitHub Release with
# the auto-generated notes. When we're ready to publish, flip these flags
# and add a build_command that runs inside the PSR container's venv.
build_command = ""
upload_to_pypi = false
upload_to_release = false

[tool.semantic_release.commit_parser_options]
allowed_tags = ["feat", "fix", "docs", "style", "refactor", "perf", "test", "build", "ci", "chore", "revert"]
minor_tags = ["feat"]
patch_tags = ["fix", "perf"]
