[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "littlepress-ai"
version = "1.19.0"
description = "Littlepress turns a child's picture-book draft PDF into a print-ready A5 book and A4 booklet. An AI agent walks the conversation; the child's voice is preserved end-to-end."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [{ name = "Mehmet Fahri Özmen" }]
keywords = ["pdf", "children", "book", "picture-book", "cli"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: End Users/Desktop",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Multimedia :: Graphics",
  "Topic :: Printing",
]
dependencies = [
  "reportlab>=4.0.0",
  "Pillow>=10.0.0",
  "pypdf>=4.0.0",
  "rich>=13.0.0",
  # Drives the interactive prompt + slash-menu auto-completion. Swaps
  # in for builtins.input in the CLI; unit tests still inject their own
  # read_line callback so they don't need a TTY.
  "prompt_toolkit>=3.0.0",
  # Bundled by default so `pip install littlepress-ai` just works —
  # the app talks to Claude out of the box; no separate extra to remember.
  "anthropic>=0.30.0",
  # Gemini provider — Google Gen AI SDK. Bundled by default because
  # Gemini's free tier (1.5k req/day, tool-use capable) is the main
  # no-credit-card on-ramp for new users; an optional extra would
  # keep that barrier in place. Floor at 1.0 so ``FunctionResponse.id``
  # and the stabilised ``HttpOptions`` / ``GenerateContentConfig``
  # shapes the provider relies on are guaranteed to be present.
  "google-genai>=1.0.0",
  # OpenAI provider. Bundled for the same reason as Anthropic — many
  # users already have a GPT key and expect it to Just Work without
  # chasing an optional extra. Floor at 1.50 so the exception
  # hierarchy the validator's auth/transient classification depends on
  # (``PermissionDeniedError`` added in 1.2.x, ``APIError`` inheritance
  # stabilised later) is reliable.
  "openai>=1.50.0",
  # Ollama local-model client. Tiny HTTP wrapper around the Ollama
  # daemon's /api/chat and /api/tags endpoints. Bundling it matches
  # the other providers; it doesn't pull in the Ollama daemon itself
  # (the user still has to install + run that locally).
  "ollama>=0.4.0",
  # Stores the Anthropic key in the OS credential manager so the user
  # only pastes it once. Cross-platform (Windows, macOS, Linux).
  "keyring>=24.0.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0", "pytest-cov>=5.0.0"]
# Offline OCR for ``transcribe_page`` on typeset pages (Samsung
# Notes / phone-scan PDFs). Needs the system ``tesseract`` binary +
# matching trained-data packs installed separately — the Python
# library here just drives the CLI. When the user isn't opting in,
# the tool's default ``method="vision"`` path goes through the
# active LLM and never imports this package.
tesseract = ["pytesseract>=0.3.10"]

[project.scripts]
# Primary command users actually type.
littlepress = "src.cli:main"
# Alias matching the PyPI package name so `uvx littlepress-ai` and
# `pipx run littlepress-ai` work without `--from`.
littlepress-ai = "src.cli:main"
# Deprecated alias for the pre-rename name; keep for one release so
# editable installs that already had it keep working. Plan to remove
# in the next minor bump.
child-book-generator = "src.cli:main"

[project.urls]
Homepage = "https://github.com/mfozmen/littlepress-ai"
Repository = "https://github.com/mfozmen/littlepress-ai"
Issues = "https://github.com/mfozmen/littlepress-ai/issues"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.hatch.build.targets.sdist]
include = ["src", "tests", "README.md", "LICENSE", "pyproject.toml"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.semantic_release]
# Conventional Commits drive every version bump. feat -> minor, fix -> patch,
# BREAKING CHANGE -> major. No manual version edits in pyproject.toml.
version_toml = ["pyproject.toml:project.version"]
branch = "main"
commit_message = "chore(release): {version} [skip ci]"
changelog_file = "CHANGELOG.md"
# No build or artifact upload yet. PSR's defaults already match what
# we want: bump the version, write CHANGELOG.md, tag, and cut a
# GitHub Release with auto-generated notes — no build artifacts, no
# PyPI push. When we're ready to publish, add a ``build_command`` +
# the publish-action step in release.yml. The legacy PSR v7/v8 keys
# (``build_command``, ``upload_to_pypi``, ``upload_to_release``) were
# removed — v9 silently ignores the latter two under this section,
# and an explicit empty ``build_command`` is indistinguishable from
# the default. Leaving them in invited config drift.

[tool.semantic_release.commit_parser_options]
allowed_tags = ["feat", "fix", "docs", "style", "refactor", "perf", "test", "build", "ci", "chore", "revert"]
minor_tags = ["feat"]
patch_tags = ["fix", "perf"]
